--- a/prueba/inicio/templates/inicio/encabezado.html
+++ b/prueba/inicio/templates/inicio/encabezado.html
@@ -71,6 +71,7 @@
     			<li><a href="{% url "Principal" %}">Home</a></li>
 					<li><a href="{% url "Formulario" %}">Registrar</a></li>
 					<li><a href="{% url "Contacto" %}">Contactanos</a></li>	
+					<li><a href="{% url "Comentarios" %}">Comentarios</a></li>	
 				</ul>
 				<!-- /Fin menú -->
 			</div>
